# digit_transmation-and-iot

./: .gitignore
certs/: device.csr  device.key  device.pem  rootCA.key  rootCA.pem  verification-bundle.pem  verification-cert.pem  verification-leaf.pem  verification-signed.pem  verification.csr  verification.key  verification.pem  verificationRequest.csr
cpp-edge/: CMakeLists.txt  mqtt_forward.cpp
data-genration-layer/: main.py
